--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -28,5 +28,10 @@
     <PackageVersion Include="FluentAssertions" Version="6.12.2" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
+
+    <!-- Integration Testing -->
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0" />
+    <PackageVersion Include="Testcontainers.PostgreSql" Version="4.2.0" />
+    <PackageVersion Include="Respawn" Version="6.2.1" />
   </ItemGroup>
 </Project>
